--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
 		<link href="css/app.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
-		<div id='scene'></div>
-		<div id='gbuilder-app'></div>
+		<div id="scene"></div>
+		<div id="gbuilder-app"></div>
 		<script src="js/three.min.js"></script>
 		<script src="js/bundle.js"></script>
 	</body>
